--- a/src/styles/scss/components/short-bio.scss
+++ b/src/styles/scss/components/short-bio.scss
@@ -1,7 +1,8 @@
 .short-bio {
+	z-index: 900;
 	color: #fff;
 	background-color: $dark;
-	padding: 100px 0;
+	padding: 100px 0 140px;
 	&__layout {
 		@include layout();
 	}
@@ -11,7 +12,6 @@
 		margin-bottom: 40px;
 		@include font('r');
 		font-size: 1.2em;
-		line-height: 1.2;
 	}
 
 	&__link {
