--- a/src/includes/short-bio.njk
+++ b/src/includes/short-bio.njk
@@ -1,6 +1,6 @@
 <div class="short-bio">
 	<div class="short-bio__layout">
 		<div class="short-bio__content">I hold a PhD in Biostatistics, during which I developed 8 open source packages used by thousands of researchers worldwide. I also worked as a Data Science Team Lead, and then as an independent AI consultant, mastering converting business needs into technical terms. Combining scientific and enterprise experience, I can support your company on the full spectrum from identifying a business problem to building a production-ready AI solution.</div>
-		<a class="short-bio__link" href="#"><span>About me</span></a>
+		<a class="short-bio__link" href="/about/"><span>About me</span></a>
 	</div>
 </div>
